refactor(minhaestante): Relocate style.css and update registration page styling

--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -1,4 +1,4 @@
-.fundopadrao {
+.fundo-padrao {
 	background-color: #643200;
 }
 
@@ -7,7 +7,7 @@
 	color: white;
 }
 
-.fundoformulario {
+.fundo-formulario {
 	background-color: #e5cc9f;
 }
 
