style(minhaestante): Update button style

--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -14,4 +14,9 @@
 .button-style {
 	background-color: #700000;
 	color: white;
+	border: black;
+}
+
+.button-style:hover {
+	background-color: #580000 !important;
 }
