refactor(front): Update BookCard component to display additional book information and button style
Co-Authored-By: Nicole M. <145381275+nicmf@users.noreply.github.com>

--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -20,3 +20,12 @@
 .button-style:hover {
 	background-color: #580000 !important;
 }
+
+.button-style2 {
+	background-color: #bc0000;
+	color: white;
+	border: black;
+}
+.button-style2:hover {
+	background-color: #580000 !important;
+}
