feat(minhaestante): Add CSS properties to button: white-space: nowrap; display: inline-block; min-width: fit-content;

--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -11,6 +11,12 @@
 	background-color: #e5cc9f;
 }
 
+button {
+	white-space: nowrap;
+	display: inline-block;
+	min-width: fit-content;
+}
+
 .button-style {
 	background-color: #700000;
 	color: white;
