--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -66,7 +66,7 @@ table {
 th,
 td {
 	padding: 10px;
-	text-align: left;
+	text-align: center; /* Modified line */
 	border-bottom: 1px solid #ddd;
 }
 
