--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -1,3 +1,11 @@
+html,
+div#root {
+	background-color: #643200;
+	font-family: "Sedan", serif;
+	font-style: normal;
+	font-weight: 400;
+}
+
 .background-default {
 	background-color: #643200;
 }
@@ -72,4 +80,9 @@ td {
 
 th {
 	background-color: #f2f2f2;
+	font-family: "Sedan", serif;
+	font-style: normal;
+}
+
+thead {
 }
