feat(minhaestante): Add FontAwesomeIcon to FloatingMenu button

--- a/front/minhaestante/src/styles/style.css
+++ b/front/minhaestante/src/styles/style.css
@@ -99,6 +99,7 @@ ul {
 	padding: 10px;
 	margin: 10px;
 	cursor: pointer;
+	width: 100%;
 }
 
 .menu-button:hover {
@@ -115,11 +116,12 @@ ul {
 	padding: 10px;
 	margin-top: 5px;
 	z-index: 1000;
+	border-radius: 5px;
 }
 .floating-menu button {
-	width: 90%; /* Faz os botões ocuparem toda a largura disponível do contêiner */
-	padding: 10px; /* Adiciona padding para aumentar a área clicável */
-	text-align: center; /* Centraliza o texto dentro do botão */
-	box-sizing: border-box; /* Inclui padding e borda no cálculo da largura do botão */
-	margin-bottom: 10px; /* Adiciona margem entre os botões */
+	width: 90%;
+	padding: 10px;
+	text-align: center;
+	box-sizing: border-box;
+	margin-bottom: 10px;
 }
